syntax = "proto3";

package user_deck_progress;

import "google/protobuf/timestamp.proto";

option go_package = "infrastructure/grpc_infr/user_deck_progress;user_deck_progress";
message UserDeckProgress{
  int32 user_id = 1;
  int32 deck_id = 2;
  string title = 3;
  string description = 4;
  optional google.protobuf.Timestamp last_reviewed_at = 5;
  int32 score = 6;
}

service UserDeckProgressService {
  rpc GetUserLearningProgressDecks (GetUserLearningProgressDecksRequest) returns (GetUserLearningProgressDecksResponse);
  rpc SelectDecksForTodayReview (UserProgressDecks) returns (UserProgressDecks);
  rpc DeleteDeckFromLearningDecks (DeleteDeckFromLearningDecksRequest) returns (DeleteDeckFromLearningDecksResponse);
}
message GetUserLearningProgressDecksRequest{}
message GetUserLearningProgressDecksResponse{
  repeated UserDeckProgress user_deck_progress_list = 1;
}
message UserProgressDecks{
  repeated  UserDeckProgress user_progress_decks = 1;
}
message DeleteDeckFromLearningDecksRequest{
  int32 deck_id = 1;
}
message DeleteDeckFromLearningDecksResponse{
  bool isSuccess = 1;
}